抽取文件类